--- a/public/buy.html
+++ b/public/buy.html
@@ -29,13 +29,13 @@
     <section id="progress">
         <div class="container">
             <div class="row text-center">
-                <div class="col-md-4">
+                <div id="step1" class="col-md-4">
                     輸入基本資料
                 </div>
-                <div class="col-md-4">
+                <div id="step2" class="col-md-4">
                     投保資料輸入
                 </div>
-                <div class="col-md-4">
+                <div id="step3" class="col-md-4">
                     繳費
                 </div>
             </div>
