--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <header>
         <div class="container">
             <div class="row">
-                <a class="brand pull-left" href="index.html">XX人壽</a>
+                <a class="brand pull-left" href="">XX人壽</a>
                 <ul class="list-inline list-unstyled pull-right">
                     <li><a href="signin">登入</a></li>
                     <li><a href="signup">註冊帳號</a></li>
@@ -74,24 +74,28 @@
             <h2>投保規則</h2>
             <table>
                 <tr>
+                    <th>適用條件</th>
+                    <td>本國人</td>
+                </tr>
+                <tr>
                     <th>投保年齡</th>
                     <td>20足歲~80歲</td>
                 </tr>
                 <tr>
-                    <th></th>
-                    <td></td>
+                    <th>投保保費</th>
+                    <td>最低1萬 最高10萬 累計不超過1000萬</td>
                 </tr>
                 <tr>
-                    <th></th>
-                    <td></td>
+                    <th>繳別</th>
+                    <td>躉繳(一次繳)</td>
                 </tr>
                 <tr>
-                    <th></th>
-                    <td></td>
+                    <th>保險年期</th>
+                    <td>終身</td>
                 </tr>
                 <tr>
-                    <th></th>
-                    <td></td>
+                    <th>金累積期間</th>
+                    <td>至少6年</td>
                 </tr>
             </table>
         </div>
@@ -103,8 +107,11 @@
             <h2>相關問題</h2>
             <h3>Q. 名詞定義</h3>
             <h3>Q. 宣告利率</h3>
+            <p>2.5%</p>
             <h3>Q. 年金給付開始日</h3>
+
             <h3>Q. 年金給付方式</h3>
+            <p>一次給付：</p>
         </div>
     </section>
 
