--- a/public/deploy.html
+++ b/public/deploy.html
@@ -13,6 +13,18 @@
     <link rel="stylesheet" href="css/template.css">
 </head>
 <body>
+
+    <header>
+        <div class="container">
+            <div class="row">
+                <a class="brand pull-left" href="/">XX人壽</a>
+                <ul class="list-inline list-unstyled pull-right">
+                    <li><a href="signin">登入</a></li>
+                    <li><a href="signup">註冊帳號</a></li>
+                </ul>
+            </div>
+    </header>
+
     <p>You deploy the contract</p>
 </body>
 </html>
