--- a/public/template.html
+++ b/public/template.html
@@ -15,15 +15,13 @@
 
 <body>
 
-
-
     <header>
         <div class="container">
             <div class="row">
-                <a class="brand pull-left" href="#">XX人壽</a>
+                <a class="brand pull-left" href="/">XX人壽</a>
                 <ul class="list-inline list-unstyled pull-right">
-                    <li><a href="#sign_up">加入會員</a></li>
-                    <li><a href="#sign_in">登入</a></li>
+                    <li><a href="signin">登入</a></li>
+                    <li><a href="signup">註冊帳號</a></li>
                 </ul>
             </div>
     </header>
