--- a/public/deploy.html
+++ b/public/deploy.html
@@ -26,5 +26,46 @@
     </header>
 
     <p>You deploy the contract</p>
+
+        <footer>
+        <div class="container">
+            <div class="col-sm-2">
+                <img src="imgs/logo.png" class="img-responsive">
+            </div>
+            <div class="col-sm-2">
+                <h5>公司</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#">文件資料</a></li>
+                    <li><a href="#">Packt出版社</a></li>
+                    <li><a href="#">關於我們</a></li>
+                    <li><a href="#">聯絡資訊</a></li>
+                </ul>
+            </div>
+            <div class="col-sm-2 ">
+                <h5>社群</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#">部落格</a></li>
+                </ul>
+            </div>
+            <div class="col-sm-2">
+                <h5>客戶支援</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#">聯絡資訊</a></li>
+                    <li><a href="#">隱私政策</a></li>
+                    <li><a href="#">條款與細則</a></li>
+                    <li><a href="#">服務台</a></li>
+                </ul>
+            </div>
+            <div class="col-sm-4">
+                <address>
+                    <strong>某某股份有限公司</strong> 地址第 1 行<br> 地址第 2 行<br>
+                    <abbr title="Phone">TEL：</abbr> (02) 1234-5678
+                </address>
+            </div>
+        </div>
+    </footer>
+
 </body>
 </html>
