--- a/public/sign_up.html
+++ b/public/sign_up.html
@@ -98,13 +98,16 @@
                         </div>
 
                         <div class="form-group">
-                            <div class="col-sm-4">
+                            <div class="col-sm-3">
                                 <a href="newAccount.html" role="button" class="btn btn-success btn-lg">送出</a>
                             </div>
-                            <div class="col-sm-4">
+                            <div class="col-sm-3">
+                                <a href="registration" role="button" class="btn btn-success btn-lg">註冊</a>
+                            </div>
+                            <div class="col-sm-3">
                                 <a id="default" role="button" class="btn btn-success btn-lg">測試預設值</a>
                             </div>
-                            <div class="col-sm-4">
+                            <div class="col-sm-3">
                                 <button class="btn btn-success btn-lg" type="reset">重設</button>
                             </div>
                         </div>
