--- a/public/test.html
+++ b/public/test.html
@@ -88,7 +88,18 @@
         </div>
     </section>
 
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h3>被保人事件</h3>
+                    <p id="console">
 
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <footer>
@@ -134,6 +145,7 @@
     <script src="js/jquery-3.1.1.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/test.js"></script>
+    <script src="js/contract.js"></script>
 </body>
 
 </html>
