--- a/public/test.html
+++ b/public/test.html
@@ -33,12 +33,12 @@
                 <h1>智能合約模擬</h1>
 
                 <div class="alert alert-info" role="alert">本功能僅供測試</div>
-
+<!--
                 <h2>選擇合約</h2>
                 <input name="smart" type="radio" value="s1">智能合約1<br>
                 <input name="smart" type="radio" value="s2">智能合約2<br>
                 <input name="smart" type="radio" value="s3">智能合約3<br>
-
+-->
                 <h2>你的人生</h2>
 
                 <div class="progress">
@@ -73,34 +73,24 @@
     <section id="out">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <h3>被保人事件</h3>
                     <p id="a">
                     </p>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <h3>保險公司事件</h3>
                     <p id="b">
                     </p>
                 </div>
-
-            </div>
-        </div>
-    </section>
-
-    <section>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h3>被保人事件</h3>
-                    <p id="console">
-
+                <div class="col-md-4">
+                    <h3>合約狀態</h3>
+                    <p id="c">
                     </p>
                 </div>
             </div>
         </div>
     </section>
-
 
     <footer>
         <div class="container">
@@ -145,7 +135,7 @@
     <script src="js/jquery-3.1.1.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/test.js"></script>
-    <script src="js/contract.js"></script>
+    <script src="js/contract-b.js"></script>
 </body>
 
 </html>
